# vertica

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.implementation-backup/application-info/src/: App.css  App.tsx  index.css
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/application/: application_info.rs  database_diagnostics.rs  mod.rs  project.rs  settings.rs
src-tauri/src/commands/: application_info.rs  database_diagnostics.rs  mod.rs  project.rs  settings.rs
src-tauri/src/domain/: application_info.rs  mod.rs  project.rs  project_repository.rs  settings.rs  settings_repository.rs
src-tauri/src/infrastructure/persistence/: database_manager.rs  database_path_resolver.rs  error.rs  migration.rs  mod.rs  project_repository.rs  settings_repository.rs
src-tauri/src/infrastructure/persistence/migrations/: 0001_initialize_persistence_foundation.sql  0002_create_application_settings.sql  0003_create_projects.sql
src/features/application-info/: applicationInfoClient.ts  applicationInfoTypes.ts
src/features/database-diagnostics/: databaseDiagnosticsClient.ts  databaseDiagnosticsTypes.ts
src/features/settings/: SettingsPanel.tsx  settingsClient.ts  settingsTypes.ts
src/i18n/: I18nProvider.tsx  translations.ts  useTranslation.ts
src/lib/: tauriClient.ts
