[package]
name = "app"
version = "0.1.0"
description = "Vertica desktop application"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = "0.4.45"
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
uuid = { version = "1.20.0", features = ["v4"] }
